MAINT-2010 Fixed the type dropdown is invisible in the dark colour scheme

--- a/app/styles/dark.scss
+++ b/app/styles/dark.scss
@@ -171,7 +171,7 @@ h4.timeline-title {
     color: #828396 ;
 }
 /*button colors */
-
+.sca-dark select.table-search.form-control,
 .sca-dark .table-search [type=text].form-control {
     box-shadow: inset 0 -1px 0 #1f2731;
     background-color: #2d3743;
