--- a/app/styles/ihtsdo.scss
+++ b/app/styles/ihtsdo.scss
@@ -2063,6 +2063,9 @@ select.form-control {
     font-size: 13px;
     line-height: 1.5;
 }
+select.form-control.table-search {
+    padding-left: 5px;
+}
 select.form-control::-ms-expand {
     display: none;
 }
